[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/theme/forge_gui.theme" type="Theme" id=1]
[ext_resource path="res://scripts/forge/gui/forge_gui/ForgeGui.gd" type="Script" id=2]
[ext_resource path="res://scenes/forge/gui/forge_gui/ForgeGuiPDA.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/forge/gui/forge_gui/TopGuiContainer.gd" type="Script" id=4]
[ext_resource path="res://scripts/forge/gui/forge_gui/CenterGuiContainer.gd" type="Script" id=5]
[ext_resource path="res://scenes/forge/gui/inventory/InventoryGui.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/forge/gui/forge_gui/BottomGuiContainer.gd" type="Script" id=7]

[node name="ForgeGui" type="VBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
alignment = 0
script = ExtResource( 2 )
_sections_unfolded = [ "Rect", "Size Flags", "Theme", "custom_constants" ]

[node name="ForgeGuiPDA" parent="." index="0" instance=ExtResource( 3 )]

[node name="TopGuiContainer" type="MarginContainer" parent="." index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 103.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
script = ExtResource( 4 )
_sections_unfolded = [ "Rect", "Size Flags", "custom_constants" ]

[node name="MarginContainer" type="MarginContainer" parent="TopGuiContainer" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 103.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 16
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="VBoxContainer" type="VBoxContainer" parent="TopGuiContainer/MarginContainer" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 16.0
margin_right = 1280.0
margin_bottom = 103.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 16
alignment = 0
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="InfoContainer" type="HBoxContainer" parent="TopGuiContainer/MarginContainer/VBoxContainer" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin", "Size Flags" ]

[node name="MarginContainer" type="MarginContainer" parent="TopGuiContainer/MarginContainer/VBoxContainer/InfoContainer" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 638.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_constants/margin_left = 16
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="HBoxContainer" type="HBoxContainer" parent="TopGuiContainer/MarginContainer/VBoxContainer/InfoContainer/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_right = 638.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 16
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="Info" type="Label" parent="TopGuiContainer/MarginContainer/VBoxContainer/InfoContainer/MarginContainer/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 50.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Info"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Another Info" type="Label" parent="TopGuiContainer/MarginContainer/VBoxContainer/InfoContainer/MarginContainer/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 66.0
margin_right = 224.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Another Info"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MarginContainer2" type="MarginContainer" parent="TopGuiContainer/MarginContainer/VBoxContainer/InfoContainer" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_constants/margin_right = 16
custom_constants/margin_left = 0
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="HBoxContainer" type="HBoxContainer" parent="TopGuiContainer/MarginContainer/VBoxContainer/InfoContainer/MarginContainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 622.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 16
alignment = 2
_sections_unfolded = [ "custom_constants" ]

[node name="Info2" type="Label" parent="TopGuiContainer/MarginContainer/VBoxContainer/InfoContainer/MarginContainer2/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 474.0
margin_right = 546.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Info 2"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Time" type="Label" parent="TopGuiContainer/MarginContainer/VBoxContainer/InfoContainer/MarginContainer2/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 562.0
margin_right = 622.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Time"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HBoxContainer" type="HBoxContainer" parent="TopGuiContainer/MarginContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 47.0
margin_right = 1280.0
margin_bottom = 87.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_constants/separation = 16
alignment = 0
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="ItemCreationProgress" type="ProgressBar" parent="TopGuiContainer/MarginContainer/VBoxContainer/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 340.0
margin_right = 940.0
margin_bottom = 40.0
rect_min_size = Vector2( 600, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 6
size_flags_vertical = 0
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 50.0
exp_edit = false
rounded = false
percent_visible = true
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Tween" type="Tween" parent="TopGuiContainer" index="1"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="CenterGuiContainer" type="MarginContainer" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 107.0
margin_right = 1280.0
margin_bottom = 508.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
script = ExtResource( 5 )
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="InventoryGui" parent="CenterGuiContainer" index="0" instance=ExtResource( 6 )]

visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 487.0

[node name="BottomGuiContainer" type="MarginContainer" parent="." index="3"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 512.0
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 8
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
script = ExtResource( 7 )
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="VBoxContainer" type="VBoxContainer" parent="BottomGuiContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 208.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 32
alignment = 0
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="CreateItemButton" type="Button" parent="BottomGuiContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 540.0
margin_right = 740.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 80 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 6
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "CREATE ITEM"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags", "Theme" ]

[node name="MarginContainer" type="MarginContainer" parent="BottomGuiContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 112.0
margin_right = 1280.0
margin_bottom = 208.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="MarginContainer1" type="MarginContainer" parent="BottomGuiContainer/VBoxContainer/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 0
custom_constants/margin_top = 18
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="Panel" type="Panel" parent="BottomGuiContainer/VBoxContainer/MarginContainer/MarginContainer1" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 1280.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
_sections_unfolded = [ "Size Flags", "custom_styles" ]

[node name="MarginContainer" type="MarginContainer" parent="BottomGuiContainer/VBoxContainer/MarginContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
_sections_unfolded = [ "custom_constants" ]

[node name="ButtonsContainer" type="HBoxContainer" parent="BottomGuiContainer/VBoxContainer/MarginContainer/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_right = 1280.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 48
alignment = 0
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="InventoryButton" type="Button" parent="BottomGuiContainer/VBoxContainer/MarginContainer/MarginContainer/ButtonsContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 200.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 80 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "INVENTORY"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="PlaceholderButton" type="Button" parent="BottomGuiContainer/VBoxContainer/MarginContainer/MarginContainer/ButtonsContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 248.0
margin_right = 448.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 80 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "PLACEHOLDER"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]


